--- a/index.html
+++ b/index.html
@@ -11,28 +11,33 @@
 
 <body>
     <div class="container">
+        <div class="info" id="info">Enter values</div>
         <div class="calc-wrapper">
             <div class="input-wrapper">
-                <input class="input" type="text" placeholder="0" autofocus>
+                <input class="input" id="input" type="text" placeholder="0" autofocus disabled>
                 <div class="button delete" id="delete"></div>
             </div>
-            <div class="buttons">
-                <div class="button">1</div>
-                <div class="button">2</div>
-                <div class="button">3</div>
-                <div class="button">+</div>
-                <div class="button">4</div>
-                <div class="button">5</div>
-                <div class="button">6</div>
-                <div class="button">-</div>
-                <div class="button">7</div>
-                <div class="button">8</div>
-                <div class="button">9</div>
-                <div class="button">×</div>
-                <div class="button">.</div>
-                <div class="button">0</div>
-                <div class="button count">=</div>
-                <div class="button">÷</div>
+            <div class="buttons" id="buttons">
+                <div class="button" data-item="(">(</div>
+                <div class="button" data-item=")">)</div>
+                <div class="button" data-item="%">%</div>
+                <div class="button" id="clear" data-item="C">C</div>
+                <div class="button" data-item="1">1</div>
+                <div class="button" data-item="2">2</div>
+                <div class="button" data-item="3">3</div>
+                <div class="button" data-item="+">+</div>
+                <div class="button" data-item="4">4</div>
+                <div class="button" data-item="5">5</div>
+                <div class="button" data-item="6">6</div>
+                <div class="button" data-item="-">-</div>
+                <div class="button" data-item="7">7</div>
+                <div class="button" data-item="8">8</div>
+                <div class="button" data-item="9">9</div>
+                <div class="button" data-item="×">×</div>
+                <div class="button" data-item=".">.</div>
+                <div class="button" data-item="0">0</div>
+                <div class="button count" id="count" data-item="=">=</div>
+                <div class="button" data-item="÷">÷</div>
             </div>
         </div>
     </div>
