add highlight for buttons

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="calc-wrapper">
             <div class="input-wrapper">
                 <input class="input" id="input" type="text" placeholder="0" autofocus disabled>
-                <div class="button delete" id="delete"></div>
+                <div class="button delete" id="delete" data-item="delete"></div>
             </div>
             <div class="buttons" id="buttons">
                 <div class="button" data-item="(">(</div>
